src/Inc.TeamAssistant.WebUI/wwwroot/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');

*,
*::before,
*::after {
	padding: 0;
	margin: 0;
	border: 0;
	box-sizing: border-box;
}
*:focus {
	outline: none;
}
a {
	text-decoration: none;
}
ul,
ol,
li {
	list-style: none;
}
img {
	vertical-align: top;
}
h1,
h2,
h3,
h4,
h5,
h6 {
	font-weight: inherit;
	font-size: inherit;
}
html,
body {
	height: 100%;
}
body {
	font-family: 'Roboto', sans-serif;
	font-size: 16px;
	color: #dfdfdf;
	background-color: #616161;
	min-width: 370px;
    line-height: 1.25rem;
    font-weight: 400;
}
html {
	scroll-behavior: smooth;
}
[class*="__container"] {
	max-width: 1080px;
	margin: 0 auto;
	padding: 0 1rem;
}
.wrapper {
    overflow: hidden;
    display: flex;
    flex-direction: column;
    min-height: 100%;
}
.main {
    flex: 1 1 auto;
}
/* PC */
@media (max-width: 1080px) {
	[class*="__container"] {
		max-width: 970px;
	}
}
/* TABLET */
@media (max-width: 991.98px) {
	[class*="__container"] {
		max-width: 750px;
	}
}
/* MOBILE */
@media (max-width: 767.98px) {
	[class*="__container"] {
		max-width: none;
	}
}
/* MOBILE SMALL */
@media (max-width: 479.98px) {
}
/* BUTTON */
.button {
    display: inline-block;
    text-transform: uppercase;
    font-weight: 700;
    font-size: .75rem;
    line-height: 1.3rem;
    letter-spacing: .0625rem;
    padding: .7rem 1rem;
    border-radius: 1rem;
    transition: background-color 0.3s ease 0s;
    background-color: transparent;
    cursor: pointer;
}
.button_light {
    border: .1875rem solid #dfdfdf;
    color: #dfdfdf;
}
.button_light:hover {
    background-color: #dfdfdf;
    color: #000;
}
.button_dark {
    border: .1875rem solid #000;
    color: #000;
}
.button_dark:hover {
    background-color: #000;
    color: #dfdfdf;
}
.button_small {
    padding: 5px;
    border-radius: 10px;
    height: 38px;
}
.link {
    font-size: 1rem;
}
.link:hover {
    text-decoration: underline;
}
.link_light {
    color: #dfdfdf;
}
.link_dark {
    color: #000;
}
/* MAP */
.marker-btn {
    background-color: #fff;
    color: #000;
    font-weight: bold;
    cursor: pointer;
    text-decoration: underline;
    font-size: .825rem;
    line-height: 1.5rem;
}
.marker-btn:hover {
    text-decoration: none;
}
.map__navbar .leaflet-top {
    top: 80px;
}
.map-popup {
    overflow: hidden;
    width: 290px;
}
.map-popup__user-avatar {
    width: 50px;
    border-radius: 50%;
    float: left;
    margin: 0 10px 10px 0;
}
/* FORMS */
.form-control {
    width: 100%;
    padding: 10px 5px;
    font-size: 1rem;
    border: 3px solid #555;
    border-radius: 0;
    color: #000;
    background-color: #dfdfdf;
    min-height: 45px;
}
.form-control:focus, .form-control_enabled:hover {
    border: 3px solid #000;
}
.form-control_disabled {
    background-color: #AAA;
    cursor: default;
}
.form-control_textarea {
    resize: none;
    height: 102px;
}
.form-control_is-valid {
    border: 3px solid #28a745;
}
.form-control_is-invalid {
    border: 3px solid #dc3545;
}
.validation-message {
    margin-top: 5px;
    font-size: 1rem;
    color: #dc3545;
}
/* ROOT COMPONENTS */
.title {
    font-size: 2.4rem;
    line-height: 3.4rem;
}
.text {
    font-size: 1.2rem;
    line-height: 1.6rem;
}
.draggable {
    cursor: grab;
}
.hint {
    cursor: context-menu;
}
/* GRID */
.quick-data-grid {
    width: 100%;
    font-size: 13px;
    border-spacing: 0;
    word-break: break-all;
}
.col-title-text {
    white-space: normal !important;
}
.quick-data-grid .link {
    font-size: 13px;
}
.quick-data-grid .col-title {
    color: #000;
    font-size: 14px;
}
.quick-data-grid tbody tr:nth-child(2n - 1){
    background-color: #555;
}
/* ANIMATIONS */
.hidden {
    visibility: hidden;
}
.animation__slide-left {
    transform: translateX(-150%);
    animation: slide-left 1.5s forwards;
    visibility: visible;
}
@keyframes slide-left {
    from { transform: translateX(-150%); }
    to { transform: translateY(0); }
}
/* ICONS */
.icon {
    transition: stroke 0.3s ease 0s;
}
.icon-star {
    width: 14px;
    aspect-ratio: 1;
    background: #000;
    display: inline-block;
    vertical-align: middle;
    clip-path: polygon(50% 0, calc(50%*(1 + sin(.4turn))) calc(50%*(1 - cos(.4turn))), calc(50%*(1 - sin(.2turn))) calc(50%*(1 - cos(.2turn))), calc(50%*(1 + sin(.2turn))) calc(50%*(1 - cos(.2turn))), calc(50%*(1 - sin(.4turn))) calc(50%*(1 - cos(.4turn))));
}
.icon-star_checked {
    background: #F8CA00;
}
.icon_light {
    stroke: #dfdfdf;    
}
.icon_dark {
    stroke: #000;
}
.button:hover .icon_light, .link:hover .icon_light {
    stroke: #000;
}
.button:hover .icon_dark, .link:hover .icon_dark {
    stroke: #dfdfdf;
}

